--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,14 @@
     <string name="right">Right</string>
     <string name="left">Left</string>
     <string name="empty_string">emptystring</string>
+    <string name="fast_speed">Fast Speed</string>
+    <string name="meterScore">00000</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="fragment_1">Fragment #1</string>
+    <string name="sensormode">SensorMode</string>
+    <string name="game_speed">Game Speed</string>
+    <string name="leaderboards">LeaderBoards</string>
+    <string name="leaderboard">Leaderboard</string>
+    <string name="title_activity_maps">MapsActivity</string>
 </resources>
